# batch-audio-transcription

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  Caddyfile  Dockerfile  README.md  alembic.ini  azure-infra-pipeline.yml  cliff.toml  docker-compose.yml  entrypoint.sh  pyproject.toml  supervisord.conf
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci-build-image.yml  code-analysis.yml  codeql.yml  deploy-dev.yml  deploy-prod.yml  deploy-status.yml  deploy-stg.yml  e2e-tests.yml  pr-title-check.yml  prune-deploy-tags.yml  sbom.yml  secrets-scanner.yml  tests.yml
docs/spikes/: DIAAT-232-nbest-alternatives.md
docs/superpowers/plans/: 2026-06-30-batch-frontend.md
frontend/: .gitignore  Caddyfile  Dockerfile  Dockerfile.dev  biome.json  components.json  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  supervisord.conf  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/audio-upload/: audio-upload.tsx
frontend/components/job-status/: job-progress.tsx  job-status-badge.tsx
frontend/components/jobs-table/: filterable-jobs-section.tsx  job-metadata-popover.tsx  jobs-table.tsx
frontend/components/transcript/: audio-player-bar.tsx  job-detail-view.tsx  low-confidence-popup.tsx  low-confidence-resolve-menu.tsx  modification-history-table.tsx  needs-review-panel.tsx  transcript-accuracy.tsx  transcript-segment.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  hover-popover.tsx  progress.tsx  separator.tsx
frontend/lib/: alternatives.ts  api-client.ts  audio-duration.ts  base-path.ts  mock-data.ts  modification-history.ts  progress.ts  types.ts  use-now.ts  utils.ts  word-alignment.ts
frontend/scripts/: e2e-summary.mjs
frontend/tests/: setup.ts
frontend/tests/__mocks__/: server-only.ts
frontend/tests/e2e/: audio-skip-controls.spec.ts  baseline-wer.spec.ts  dashboard.spec.ts  low-confidence-hover.spec.ts  low-confidence-resolve.spec.ts  modification-history.spec.ts  progress.spec.ts  review-panel.spec.ts  segment-accept.spec.ts  transcript.spec.ts
frontend/tests/unit/: e2e-summary.test.ts
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_idempotency_unique_constraint.py  003_key_lookup_hash_and_webhook_dispatch.py  004_seed_courtstranscribe_caller.py  004_seed_frontend_caller.py  005_correction_dataset_entry.py  005_dialogue_entries_gin_index.py  006_dialogue_entries_gin_index.py  006_transcription_run_metadata.py  007_dialogue_entries_gin_index.py  008_reconcile_run_metadata_drift.py  009_baseline_transcript.py  010_model_display_name.py
scripts/: queue-infra-pipeline.sh  seed_local_db.py
src/transcription_svc/: main.py
src/transcription_svc/api/: app.py  dependencies.py  routes.py
src/transcription_svc/audio/: accuracy.py  azure_utils.py  batch_client.py  local_storage.py  polling_service.py  preprocessing.py  speakers.py  submission.py  wer.py
tests/: conftest.py
tests/integration/: test_dialogue_entries_persistence.py
tests/unit/api/: test_routes.py
(+57 files in other folders)
