[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transcription-svc"
version = "1.0.0"
description = "Batch audio transcription microservice for Azure Speech Services"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "tenacity>=8.2",
    "passlib[bcrypt]>=1.7",
    "cryptography>=42.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "sentry-sdk[fastapi]>=2.0",
    "azure-storage-blob>=12.20",
    "azure-identity>=1.17",
    "uwotm8>=0.1",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "coverage>=7.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/transcription_svc"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = ["S101", "S603", "S607", "B008", "S104"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S105", "S106"]
"migrations/**" = ["E501"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "migrations/*"]
